--- a/HelpDeskData/HelpDeskData.csproj
+++ b/HelpDeskData/HelpDeskData.csproj
@@ -15,6 +15,7 @@
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -81,6 +82,7 @@
     <Compile Include="ExtensionData\ExtendedSelectListItem.cs" />
     <Compile Include="ExtentionTransaction.cs" />
     <Compile Include="Manage\PengajuanDana.cs" />
+    <Compile Include="Manage\PertanggungJawaban.cs" />
     <Compile Include="Manage\ProgramKerja.cs" />
     <Compile Include="Manage\Ticket.cs" />
     <Compile Include="Manage\User.cs" />
